Fix couple of code smells